--- a/Schmiget.html
+++ b/Schmiget.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>IAMTHEBEST</title>
   </head>
   <body>
     <table>
@@ -33,9 +33,6 @@
     <hr>
     <h2><a href="Friends.html">Friends</a></h2>
     <h1><a href="Contact me.html">Contact me</a></h1>
-
-
-
 
   </body>
 </html>
